--- a/src/components/intro.scss
+++ b/src/components/intro.scss
@@ -4,6 +4,9 @@
 .intro{
     width: 80vw;
     margin-top: 10vh;
+    @include mobile{
+        margin-top: 5vh;
+    }
     //display: flex;
     justify-content: center;
     overflow: hidden;
@@ -46,9 +49,16 @@
                //background-color: brown;
                 display: flex; 
                 flex-wrap: wrap; 
+                overflow: hidden;
+                @include mobile{
+                    display: inline-block;
+                    width: 90vw;
+                    text-align: center;
+                    
+                }
                 span{
                     @include mobile{
-                        font-size: 0.7rem;
+                        font-size: 1rem;
                     }
                     font-style: italic;
                     font-size: 1.5rem;
@@ -67,11 +77,21 @@
                 @include mobile{
                     flex-direction: column-reverse;
                     align-items: center;
+                    justify-content: center;
                 }
 
                 .column{
                     text-align: center;
                     flex: 50%;
+                    @include mobile{
+                        flex: none;
+                    }
+
+                    .imageBreak{
+                        @include mobile{
+                            display: none;
+                        }
+                    }
 
                     .pContainer{
                         display: flex;
@@ -79,6 +99,12 @@
                         justify-content: center;
                         padding-left: 10%;
                         padding-right: 10%;
+                        @include mobile{
+                            font-size: 12px;
+                            flex-wrap: wrap;
+                            padding-left: 47%;
+                            padding-right: 47%;
+                        }
                         //flex-direction: row;
                         
                         // align-items: center;
@@ -86,7 +112,11 @@
                         // overflow: hidden;
                         // text-align: center;
                         p{
-                            
+                            .break{
+                                @include mobile{
+                                    display: none;
+                                }
+                            }
                             margin-left: auto;
                             margin-right: auto;
                             backdrop-filter: brightness(300%);
@@ -107,21 +137,13 @@
                         text-align: center;
 
                         @include mobile{
-                            width: 7%;
+                            width: 4%;
                         }
                         
                         //vertical-align: top;
                         //display: inline-block;
 
-                        .caption{
 
-                            display: block;
-                            padding-top: 35%;
-                            position: absolute;
-                            font-size: 12px;
-                            font-style: italic;
-                            
-                        }
                         
                     }
                 }
